--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "lodash": "^4.17.15",
+    "lodash-es": "4.17.11",
+    "lodash-move": "1.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-spring": "^8.0.27",
+    "react-use-gesture": "5.0.0",
     "styled-components": "^5.1.0"
   },
   "scripts": {
@@ -31,6 +33,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.155",
     "babel-eslint": "^10.0.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^17.1.0",
