--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animejs": "^3.2.0",
     "react": "^16.13.1",
+    "react-anime": "^3.0.3",
     "react-dom": "^16.13.1",
+    "react-morph": "^0.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
