--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
     "react-use-gesture": "5.0.0",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "lodash": "^4.17.11"
   },
   "scripts": {
     "start": "react-scripts start",
